AdaptorJson追加
